--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /local_files/*
 test.py
 scripts/prep_submission.py
-scripts/prep_vocab.py
+scripts/prep_vocab_old.py
 scripts/noice_generator.py
 .DS_store
 scripts/.DS_store
 __pycache__
+.vscode/*
